<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_my"
    tools:context=".SignUpScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="179dp"
            android:layout_height="95dp"
            android:layout_gravity="center"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo" />
        <ImageView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:text="@string/app_name"
            android:textColor="@color/orange"
            app:layout_constraintEnd_toEndOf="@id/imageView"
            app:layout_constraintStart_toStartOf="@id/imageView"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            app:srcCompat="@drawable/wc_text" />

        <EditText
            android:id="@+id/edt_name"
            style="@style/edtTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="72dp"
            android:foregroundGravity="center"
            android:hint="Имя"
            android:inputType="textPersonName"
            app:layout_constraintTop_toBottomOf="@+id/text"/>

        <EditText
            android:id="@+id/edt_surname"
            style="@style/edtTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@id/edt_name"
            app:layout_constraintTop_toBottomOf="@id/edt_name"/>
        <EditText
            android:id="@+id/edt_email"
            style="@style/edtTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:hint="@string/e_mail"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="@id/edt_surname"
            app:layout_constraintTop_toBottomOf="@id/edt_surname"/>
        <EditText
            android:id="@+id/edt_passwd"
            style="@style/edtTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/edt_email"
            app:layout_constraintTop_toBottomOf="@id/edt_email"/>

        <EditText
            android:id="@+id/edt_repet_passwd"
            style="@style/edtTransparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="16dp"
            android:hint="@string/repetpasswd"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@id/edt_passwd"
            app:layout_constraintTop_toBottomOf="@id/edt_passwd"/>


        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/orange"
            android:onClick="nextActivity"
            android:foregroundGravity="center"
            android:text="@string/text1"
            app:layout_constraintBottom_toTopOf="@+id/btnToSignIn"/>
        <Button
            android:id="@+id/btnToSignIn"
            android:onClick="nextActivity"
            style="@style/buttTransparent"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/text2"
            app:layout_constraintBottom_toBottomOf="parent" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>